# Astrodyn-UHASS-Studio-Project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
app/: main.cpp  orbit_sandbox.cpp
docs/: build_order.md  live_gui_sandbox.md
examples/: finite_burn_raise.cpp  gravity_assist_demo.cpp  hohmann_transfer.cpp  sun_jupiter_asteroid.cpp  two_body_compare.cpp
include/astrodyn/: LargeBody.hpp  PhysicsTypes.hpp  Presets.hpp  SmallBody.hpp  SpaceCraft.hpp  SpaceObject.hpp  StartPhysics.hpp  TestParticle.hpp  Universe.hpp  Vec2.hpp  astro.hpp  body_catalog.hpp  csv.hpp  integrators.hpp  sandbox_world.hpp  state.hpp  vec2.hpp
scripts/: plot_csv.py  run_all_examples.sh
src/: LargeBody.cpp  Presets.cpp  SmallBody.cpp  SpaceCraft.cpp  SpaceObject.cpp  TestParticle.cpp  Universe.cpp  astro.cpp  body_catalog.cpp  csv.cpp  integrators.cpp  vec2.cpp
